--- a/src/main.css
+++ b/src/main.css
@@ -8,6 +8,11 @@ html {
     font-family: Inter, Helvetica, Arial, sans-serif;
 }
 
+code {
+    font-family: monospace;
+    font-size: 16px;
+}
+
 html,
 body {
     margin: 0;
