--- a/src/main.css
+++ b/src/main.css
@@ -25,5 +25,5 @@ body {
 }
 
 .btn.std {
-    @apply bg-zinc-200 py-2 px-3 shadow hover:bg-zinc-300 active:bg-zinc-400 transition;
+    @apply bg-green-200 py-2 px-3 shadow hover:bg-green-300 active:bg-green-400 transition;
 }
