--- a/src/main.css
+++ b/src/main.css
@@ -9,6 +9,12 @@ code {
     font-size: 16px;
 }
 
+html {
+    background-image: url("/cloth.png");
+    background-position: center;
+    background-attachment: fixed;
+}
+
 html,
 body {
     margin: 0;
